- Updated jQuery and jQuery UI - Fixed bugs: 95, 106, 121, 122, 123, 127, 128

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -48,6 +48,10 @@ textarea {
     padding: 2px;
 }
 
+textarea + .ui-resizable-se {
+    bottom: 17px;
+}
+
 select {
     height: 22px;
     min-width: 150px;
