--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -7,9 +7,15 @@ body {
     margin: 0;
 }
 
-a, img, fieldset, div, span, form, fieldset, input, textarea, select, ol, ul, li, dl, dt, dd {
+a, img, fieldset, div, span, form, fieldset, input, textarea, select, 
+ol, ul, li, dl, dt, dd {
     border: none; 
     outline: none;
+    margin: 0;
+    padding: 0;
+}
+
+input[type="button"]::-moz-focus-inner {
     margin: 0;
     padding: 0;
 }
@@ -35,7 +41,8 @@ input, textarea, select {
     font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;
     font-size: 9pt;
     background: #FFFFFF;
-    border: 1px solid #7F9DB9;    
+    border: 1px solid #7F9DB9; 
+    line-height: 1;
 }
 
 input[type=text], input[type=password], input[type=number], input[type=email], input[type=url] {
@@ -46,10 +53,7 @@ input[type=text], input[type=password], input[type=number], input[type=email], i
 
 textarea {
     padding: 2px;
-}
-
-textarea + .ui-resizable-se {
-    bottom: 17px;
+    overflow: auto;
 }
 
 select {
@@ -169,10 +173,6 @@ a:hover {
     border-right: none;
 }
 
-#tabs > ul > li {
-    line-height: normal;
-}
-
 /* BUTTONS */
 
 .buttons {
@@ -199,7 +199,7 @@ a:hover {
 }
 
 .buttons input {
-    padding-top: 2px;
+    height: 23px;
 }
 
 .buttons a {
@@ -223,14 +223,14 @@ a:hover {
     margin-top: 0;
 }
 
-.form > div > .property-label, .property-list li > .property-label {
+.form > div > .property-label, .property-list li > .property-label, .label {
     width: 25%;
     float: left;  
     color: #666666;
     text-align: right;
 }
 
-.form > div > .property-value, .property-list li > .property-value {
+.form > div > .property-value, .property-list li > .property-value, .value {
     display: block;
     text-align: left;
     margin: 0 0 0 26%;
@@ -604,6 +604,11 @@ span.remove-item {
     padding: 0;
 }
 
+#participant-form #tabs > ul:first-child {  
+    margin-top: -15px;
+    margin-bottom: 15px;
+}
+
 #participant-form .column {
     width: 50%;
     margin: 0;
@@ -611,7 +616,7 @@ span.remove-item {
 }
 
 #participant-form .column > fieldset, #participant-form .column > div {
-    margin: 20px 0;
+    margin-bottom: 20px;
 }
 
 #participant-form .property-label {
@@ -628,7 +633,7 @@ span.remove-item {
 
 #papers-tab .column {
     border-bottom: 1px solid #225496;
-    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #participant-present {
@@ -835,6 +840,12 @@ ul input.session-name {
     display: block;
     margin-left: 50px;
     margin-top: 10px;
+}
+
+/* LOGIN */
+
+#login {
+    margin: 0;    
 }
 
 /* HELPERS */
