--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -72,12 +72,12 @@ input[type=checkbox], input[type=radio] {
     vertical-align: middle;
 }
 
-h1 {
+h1 {   
     border-bottom: 1px solid #225496;
     color: #225496;
     font-weight: normal;
-    font-size: 16pt;
-    margin: 0 0 30px;
+    font-size: 16pt; 
+    margin: 0 0 30px;    
 }
 
 h2, h3, legend {
@@ -604,9 +604,20 @@ span.remove-item {
     padding: 0;
 }
 
-#participant-form #tabs > ul:first-child {  
-    margin-top: -15px;
-    margin-bottom: 15px;
+#participant-form {
+    position: relative;
+}
+
+#participant-form #tabs > ul:first-child { 
+    position: absolute;     
+    top: -63px;
+    left: 40%;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+    #participant-form #tabs > ul:first-child {   
+        top: -62px;
+    }
 }
 
 #participant-form .column {
