--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -179,6 +179,7 @@ a:hover {
     margin: 15px 0;
     overflow: hidden;
     padding: 5px;
+    clear: both;
 }
 
 .buttons input, .buttons a {
@@ -196,6 +197,7 @@ a:hover {
     background-color: #FFFFFF;
     text-align: center;
     vertical-align: middle;
+    float: left;
 }
 
 .buttons input {
@@ -208,6 +210,10 @@ a:hover {
 
 .buttons input:hover, .buttons input:focus, .buttons a:hover, .buttons a:focus {
     background-color: #CAE1FF;
+}
+
+.buttons .btn_delete {
+    float: right;    
 }
 
 /* LISTS AND FORMS */
