- Updated jQuery, updated use of deprecated functions - Updated Quartz, updated with use of trigger key - Fixed query string when saving form and then using prev/next links - Improved participant searching

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -167,7 +167,7 @@ a:hover {
     position: static;
 }
 
-#tabs > ul {
+#tabs > ul, #tabs > ol {
     border-top: none;
     border-left: none;
     border-right: none;
