Updated network edit page with autocomplete box for participants Updated autocomplete box on session edit page Fixed problems with fee controller

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -880,6 +880,22 @@ ul input.session-name {
     margin: 0;    
 }
 
+/* AUTOCOMPLETE */
+
+.ui-autocomplete {
+    max-height: 100px;
+    overflow-y: auto;
+    overflow-x: hidden;
+}
+
+* html .ui-autocomplete {
+    height: 100px;
+}
+
+.ui-autocomplete-loading { 
+    background: url('../images/spinner.gif') no-repeat right center;
+}
+
 /* HELPERS */
 
 .left {
