#166: Multiple rooms show up in session planner, session date times from other event dates leaked in

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -239,7 +239,9 @@ a:hover {
 .form > div > .property-value, .property-list li > .property-value, .value {
     display: block;
     text-align: left;
-    margin: 0 0 0 26%;
+    margin: 0 0 0 26%;    
+    white-space: normal;
+    word-wrap: break-word;
 }
 
 .column.form > div > .property-label {
