--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -578,6 +578,11 @@ span.remove-item {
 
 #filter .buttons {
     text-align: center;
+    padding-right: 30px;
+}
+
+#filter .buttons a, #filter .buttons input {
+    float: none;
 }
 
 #status {
