--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -58,9 +58,12 @@ textarea {
 
 select {
     height: 22px;
-    min-width: 150px;
-    max-width: 400px;
+    min-width: 150px;    
     vertical-align: middle;
+}
+
+#content select {
+    max-width: 400px;
 }
 
 select[size], select[multiple] {
