--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -153,7 +153,7 @@ a:hover {
     font-weight: bold; 
     text-align: center;
     top: 5px;
-    right: 0;
+    right: 0;    
 }
 
 .navigation .prev, .navigation .next {
@@ -499,6 +499,7 @@ span.remove-item {
     padding: 0 8px;
     padding-bottom: 20px;
     border-right: 1px solid #225496;
+    overflow: hidden;
 }
 
 #nav dt {
