- #290: All select boxes for session state and paper state are replaced by radio buttons - #293: Toggle button added to network page to hide participants in session - ParticipantSessionInfo JSON maps code clones cleaned up - Updated jQuery and jQuery UI

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -145,6 +145,18 @@ a:hover {
     color: #cc0000;
 }
 
+/* TOGGLE */
+
+.toggle-session-participants {
+    cursor: pointer;
+    position: absolute;
+    color: #225496;
+    font-weight: bold; 
+    text-align: center;
+    top: 5px;
+    right: 0;    
+}
+
 /* NAVIGATION */
 
 .navigation {
