#294: Paper state change pop-up added to network and session pages #296: showInternal removed from Network domain class

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -157,6 +157,12 @@ a:hover {
     right: 0;    
 }
 
+/* DIALOGS */
+
+.edit-paper-icon {
+    cursor: pointer;    
+}
+
 /* NAVIGATION */
 
 .navigation {
