--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -119,7 +119,8 @@ a:hover {
 
 /* MESSAGES AND ERRORS */
 
-.message, .errors li {    
+.message, .errors li, #conflicts-searching, #no-conflicts, #conflicts li, #conflicts span {
+    display: block;
     padding: 5px;
     text-indent: 25px;
 }
@@ -970,6 +971,38 @@ ul input.session-name {
     position: absolute;
     left: -10px;
     top: 15px;
+}
+
+#conflicts-searching {
+    margin: 30px 30px 20px;
+    background: url("[resource_dir]/spinner.gif") no-repeat scroll 7px 50% transparent;
+    color: [main_color_dark];
+       -moz-box-shadow: 0 0 3px 1px [main_color_dark];
+    -webkit-box-shadow: 0 0 3px 1px [main_color_dark];
+            box-shadow: 0 0 3px 1px [main_color_dark];
+}
+
+#no-conflicts {
+    display: none;
+    margin: 30px 30px 20px;
+    background: url("[resource_dir]/skin/information.png") no-repeat scroll 7px 50% transparent;
+    color: [main_color_dark];
+       -moz-box-shadow: 0 0 3px 1px [main_color_dark];
+    -webkit-box-shadow: 0 0 3px 1px [main_color_dark];
+            box-shadow: 0 0 3px 1px [main_color_dark];
+}
+
+#conflicts {
+    display: none;
+    margin: 30px 30px 20px;
+    color: #cc0000;
+       -moz-box-shadow: 0 0 3px 1px #ff8888;
+    -webkit-box-shadow: 0 0 3px 1px #ff8888;
+            box-shadow: 0 0 3px 1px #ff8888;
+}
+
+#conflicts span {
+    background: url("[resource_dir]/skin/exclamation.png") no-repeat scroll 7px 50% transparent;
 }
 
 /* EMAIL AND EXPORT */
