- Grails version upgraded to 2.3.1 - Various other plugins / libraries upgraded to newer versions - Several issues fixed

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -789,6 +789,10 @@ span.remove-item {
     border: 1px solid [main_color_dark];
 }
 
+#change-user {
+    margin-left: 30px;
+}
+
 #selected-days {
     text-align: center;
 }
