Payment status is now more clear and the amount of payment confirm buttons has been limited

--- a/web-app/css/default.css
+++ b/web-app/css/default.css
@@ -1198,3 +1198,15 @@ table.payment-statistics tbody tr:hover {
 .bold {
     font-weight: bold;
 }
+
+.red {
+    color: red;
+}
+
+.orange {
+    color: orange;
+}
+
+.green {
+    color: green;
+}
